# readual

./: Cargo.toml  LICENSE  README-DEB.md  README.md
creates/readual-cli/: Cargo.toml  build.rs
creates/readual-cli/src/: main.rs
creates/readual-command-info/: Cargo.toml
creates/readual-command-info/src/: lib.rs
creates/readual-command-run/: Cargo.toml
creates/readual-command-run/src/: index.rs  lib.rs
creates/readual-fs/: Cargo.toml
creates/readual-fs/examples/: basic_usage.rs
creates/readual-fs/src/: config.rs  driver.rs  lib.rs  sandbox.rs  transparent.rs
creates/readual-md/: Cargo.toml
creates/readual-md/examples/: parse_readme.rs
creates/readual-md/src/: directive.rs  document.rs  lib.rs  structure.rs  titles.rs
creates/readual-output/: Cargo.toml
creates/readual-output/examples/: basic_usage.rs  verbosity_test.rs
creates/readual-output/src/: lib.rs
readual-cli/: Cargo.toml
samples/: README.md
