[package]
name = "readual-command-run"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Library for running commands and scripts"

[dependencies]
clap = { version = "4.4", features = ["derive"] }

[lib]
name = "readual_command_run"
path = "src/lib.rs"
